--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 ./ae_data/all_regularized_impurities_normal
+.idea/workspace.xml
+__pycache__/
+ae_data/all_regularized_impurities_anomaly_over0.6/
+ae_data/all_regularized_impurities_normal/
+ae_data/data_anomaly/
+ae_data/data_normal/
+
